# internal/handlers/riderhdl/create_dto.go
@@ -1,14 +1,0 @@
-package riderhdl
-
-import "rider-service/internal/core/domain"
-
-type BodyCreate struct {
-	Name   string
-	Status int8
-}
-
-type ResponseCreate domain.Rider
-
-func BuildResponseCreate(model domain.Rider) ResponseCreate {
-	return ResponseCreate(model)
-}
