# internal/handlers/riderhdl/update_dto.go
@@ -1,14 +1,0 @@
-package riderhdl
-
-import "rider-service/internal/core/domain"
-
-type BodyUpdate struct {
-	Name   string
-	Status int8
-}
-
-type ResponseUpdate domain.Rider
-
-func BuildResponseUpdate(model domain.Rider) ResponseCreate {
-	return ResponseCreate(model)
-}
